added activities module